WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257398
[UI-side compositing] Mock scrollbars fail to update in many layout tests
https://bugs.webkit.org/show_bug.cgi?id=257398
Summary
[UI-side compositing] Mock scrollbars fail to update in many layout tests
Simon Fraser (smfr)
Reported
2023-05-26 15:40:33 PDT
scrollingcoordinator/mac/multiple-fixed.html fails with UI-side compositing. The scrollbar fails to update.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-26 15:40:54 PDT
<
rdar://problem/109908570
>
Simon Fraser (smfr)
Comment 2
2023-05-26 15:44:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14407
EWS
Comment 3
2023-05-26 20:06:17 PDT
Committed
264615@main
(7c78af270fc7): <
https://commits.webkit.org/264615@main
> Reviewed commits have been landed. Closing PR #14407 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug