[UI-side compositing] Mock scrollbars fail to update in many layout tests https://bugs.webkit.org/show_bug.cgi?id=257398 rdar://109908570

Reviewed by Tim Nguyen.

After 264094@main we'd fail to issue a repaint in the scrollbar layer in layout tests where
mock scrollers are enabled, so the scrollbar would never update on scrollingcoordinator/mac/multiple-fixed.html
and probably many other tests, with UI-side compositing enabled.

Fix by having RemoteScrollbarsController::shouldDrawIntoScrollbarLayer() ask whether the scrollbar
is a mock scrollbar.

* Source/WebCore/platform/Scrollbar.cpp:
(WebCore::Scrollbar::isMockScrollbar const):
* Source/WebCore/platform/Scrollbar.h:
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteScrollbarsController.mm:
(WebKit::RemoteScrollbarsController::shouldDrawIntoScrollbarLayer const):

Canonical link: https://commits.webkit.org/264615@main